router/uniform-router/file/go-client/conf/dest_rule.yml
apiVersion: service.dubbo.apache.org/v1alpha1
kind: DestinationRule
metadata: { name: demo-route }
spec:
  host: demo
  subsets:
    - name: all
      labels: { ut: CENTER } # 服务端url存在 `ut:CENTER` 的键值参数
    - name: center
      labels: { ut: other } # 服务端url存在 `ut:other` 的键值参数
    - name: other
